5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1602_1015.log
== TEST (2019-04-01 15:44:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input(entre com um numero inteiro:))
b=int(input(entre com um segundo numero inteiro:))
c=int(input(entre com um terceiro numero inteiro:))
x=min(a,b,c)
y=max(a,b,c)
w=a+b+c-min(a,b,c)-max(a,b,c)
print("a oedem é:"x,y,w)
-- ERROR:
File "XXXX", line 4
    a=int(input(entre com um numero inteiro:))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:45:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("entre com um numero inteiro:"))
b=int(input("entre com um segundo numero inteiro:"))
c=int(input("entre com um terceiro numero inteiro:"))
x=min(a,b,c)
y=max(a,b,c)
w=a+b+c-min(a,b,c)-max(a,b,c)
print("a oedem é:"x,y,w)
-- ERROR:
File "XXXX", line 10
    print("a oedem é:"x,y,w)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:45:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("entre com um numero inteiro:"))
b=int(input("entre com um segundo numero inteiro:"))
c=int(input("entre com um terceiro numero inteiro:"))
x=min(a,b,c)
y=max(a,b,c)
w=a+b+c-min(a,b,c)-max(a,b,c)
print(x)
print(y)
print(w)
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("entre com um numero inteiro:"))
b=int(input("entre com um segundo numero inteiro:"))
c=int(input("entre com um terceiro numero inteiro:"))
x=min(a,b,c)
y=max(a,b,c)
w=a+b+c-min(a,b,c)-max(a,b,c)
print(x)
print(w)
print(y)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("entre com um numero inteiro:"))
b=int(input("entre com um segundo numero inteiro:"))
c=int(input("entre com um terceiro numero inteiro:"))
x=min(a,b,c)
y=max(a,b,c)
w=a+b+c-min(a,b,c)-max(a,b,c)
print(x)
print(w)
print(y)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:46:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("entre com um numero inteiro:"))
b=int(input("entre com um segundo numero inteiro:"))
c=int(input("entre com um terceiro numero inteiro:"))
x=min(a,b,c)
y=max(a,b,c)
w=a+b+c-min(a,b,c)-max(a,b,c)
print(x)
print(w)
print(y)
-- EXECUTION TIME:
0.174641
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
